--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Maths et Matic Projector",
-    "short_name": "MathsMentales",
+    "short_name": "Maths et Matic Projector",
     "description": "Votre plateforme de calcul mentales en classe",
     "start_url": "/",
     "icons": [
