--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ library/illustrations/Persos/roi1.png
 library/illustrations/Persos/roi2.png
 library/illustrations/Persos/sorcier1.png
 .htaccess
+CNAME
