--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
     "name": "MathsMentales",
     "short_name": "MathsMentales",
+    "id":"/index.html",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#fff",
     "description": "Automatismes et calcul mental en Mathématiques",
     "icons": [{
-      "src": "images/android-icon-48x48.png",
+      "src": "img/android-icon-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     }, {
-      "src": "images/android-icon-72x72.png",
+      "src": "img/android-icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },{ "src": "images/android-icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     }, {
-      "src": "images/android-icon-144x144.png",
+      "src": "img/android-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     }],
