--- a/.htaccess
+++ b/.htaccess
@@ -26,5 +26,6 @@ ExpiresByType image/gif "access plus 1 month"
 ExpiresByType image/png "access plus 1 month"
 ExpiresByType image/jpeg "access plus 1 month"
 ExpiresByType text/css "access plus 1 day"
+ExpiresByType text/json "access plus 1 hour"
 ExpiresByType application/javascript "access plus 1 day"
 </IfModule>
